--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ CopyEdit
 <body>
   <div class="container">
     <h1>Welcome to DevOps Stage 0 - Oghenekome Udogu/@kay1.kom</h1>
-    <p>Successfully deployed on AWS</p>
+    <p>Successfully deployed on Linode</p>
     <p class="timestamp">Deployed: 08/09/2025</p>
   </div>
 </body>
